--- a/src/styles/oldstyles/layout.scss
+++ b/src/styles/oldstyles/layout.scss
@@ -1,4 +1,4 @@
-$primary: #49A8F3;
+$primary: #0073F9; // #49A8F3;
 $background-color: #FBFCFC;
 $light-grey: #eee;
 $shadow-0: 0 1px 4px rgba(0,0,0,0.03), 0 1px 3px rgba(0,0,0,0.06);
