--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,7 @@
 @import "productscard";
 @import "productsdialogs";
 @import "processattribute";
+@import "processattributefield";
 @import "createprocessdialog";
 @import "datepicker";
 @import "menu";
@@ -28,6 +29,8 @@
 @import "account";
 @import "packingorders"; 
 @import "orderdetail"; 
+@import "home";
+@import "alerts";
 
 .lesmis {
 	.links line {
