--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,6 +1,7 @@
 .d-nav {
 	z-index: 1;
-	background-color: #373A3D;
+	background-color: $background-color;
+	padding-top: $nav-height;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -8,15 +9,16 @@
 	width: $nav-width;
 	display: flex;
 	flex-direction: column;
+	border-right: 1px solid $light-gray;
 
-	color: rgba(255,255,255, 0.4);
+	color: $gray;
 	font-size: 13px;
 	line-height: 16px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
 	.nav-group {
-		border-bottom: 1px solid rgba(39,43,46,0.5);
+		//border-bottom: 1px solid rgba(39,43,46,0.5);
 		padding-left: 16px;
 
 		span {
@@ -25,11 +27,15 @@
 			font-size: 10px;
 			display: block;
 			padding: 16px 0;
-			color: rgba(255,255,255,0.2);
+			color: $gray;
 		}
 
 		li {
 			margin-bottom: 16px;
+
+			&:first-child {
+				margin-top: 16px;
+			}
 
 			.nav-icon {
 				height: 16px;
@@ -52,32 +58,58 @@
 		}
 
 	}
-
-	.logo {
-		background-color: #272B2E;
-		margin-bottom: 16px;
-		height: 128px;
-	}
 }
 
 .d-top {
+	height: $nav-height;
+
+	.nav-logo {
+		width: $nav-width;
+	}
+
+	img.logo {
+		margin-left: 16px;
+	}
+
+	z-index: 999;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: white;
+	box-shadow: $card-shadow;
 	display: flex;
-	min-height: 128px;
 	align-items: center;
 	
-	.nav-left {
+		.nav-left {
 		flex: 1;
 		flex-grow: 1;
 		margin: 0px 36px;
 
 		.Select-control {
 			border: none;
+			background-color: rgba(0,0,0,0);
+		}
+
+		.multiselect.inputs {
+			background-color: rgba(0,0,0,0.05);	
+			border: none;
+
+			input {
+				color: white;
+			}
+
+			div.Select.is-focused > div.Select-control {
+				background-color: rgba(0,0,0,0) !important;
+				color: rgba(255,255,255, 0.7) !important;
+			}
 		}
 
 		.filters {
 			max-width: 900px;
 		}
 	}
+
 
 	.nav-team {
 		margin: 0 36px;
