--- a/src/styles/processattribute.scss
+++ b/src/styles/processattribute.scss
@@ -1,72 +1,70 @@
-.products-card-attributes {
+.attribute-header {
+	display: flex;
+
 	h2 {
-		line-height: 42px;
+		flex: 1;
+	}
+
+	button {
+		flex: 0;
+		white-space: nowrap;
+		color: $primary;
+		background-color: white;
+		padding: 0;
+		margin: 0;
+		font-size: 14px;
+		line-height: 20px;
+		margin-bottom: 8px;
 	}
 }
 
 .process-attribute {
-	display: flex;
 	cursor: default;
-	border-bottom: 0.5px solid #ddd;
+	border: 1px solid $light-gray;
+	border-radius: 4px;
+	margin-bottom: 16px;
+	padding: 16px;
 
-	i {
-		font-size: 16px;
-		line-height: 40px;
-		vertical-align: middle;
-		color: rgba(0,0,0,0.3);
+	.stack-vertical {
+		display: flex;
+		flex-direction: row;
 	}
 
-	&>div {
-		margin-left: 8px;
-
-		&:first-child {
-			margin-left: 8px;
-		}
-
-		&:last-child {
-			margin-right: 8px;
-		}
+	.stack-horizontal {
+		display: flex;
+		flex-direction: column;
 	}
 
-	.process-attribute-move {
-		flex: 0;
-		min-width: 16px;
-		text-align: center;
-	}
-
-	.process-attribute-name {
+	div {
 		flex: 1;
-
-		span {
-			line-height: 40px;
-		}
 	}
 
-	.process-attribute-type {
+	.drag-handle, .process-attribute-more {
 		flex: 0;
+		flex-basis: content;
 		text-align: right;
-	}
-
-	.process-attribute-more {
-		flex: 0;
-		min-width: 16px;
-		text-align:center;
-		i {
-			display: none;
-		}
-	}
-}
-
-.process-attribute:hover {
-	.process-attribute-more i {
-		display: block;
 		cursor: pointer;
+		color: $red;
+		img {
+			width: 16px;
+			opacity: 0.3;
+		}
 	}
 
-	&.new-attribute {
-		.process-attribute-more i {
-			display: none;
+	.process-attribute-row {
+		display: flex;
+
+		.process-attribute-field {
+			flex: 3;
+			&:last-child {
+				flex: 2;
+			}
 		}
+	}
+
+	.buttons {
+		display: flex;
+		justify-content: flex-end;
 	}
 }
 
@@ -79,13 +77,4 @@
 		color: $theme-color;
 		margin-right: 4px;
 	}
-
-	.process-attribute-move i, .proess-attribute-more i {
-		display: none;
-	}
-}
-
-.process-attribute-creator {
-	display: flex;
-	flex-direction: column;
 }
