--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -11,6 +11,7 @@ $nav-width: 144px;
 $nav-height: 64px;
 $top-padding: 48px;
 $card-shadow: 0 2px 4px 0 rgba(0,0,0,0.04);
+$panel-width: 300px;
 
 html, body, #root {
 	width: 100%;
