--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -3,9 +3,9 @@ $background-color: #F8F8F8;
 $red: #DD5151;
 $black: rgba(0,0,0,0.86);
 $gray: rgba(0,0,0,0.48);
-$light-gray: rgba(0,0,0,0.1);
+$light-gray: rgba(0,0,0,0.06);
 $theme-color: #0073F9; //#2198EE; //42AFFF;
-$dark-theme-color: #0068B4;
+$dark-theme-color: #0465D8;
 $baseline: 8px;
 $nav-width: 144px;
 $nav-height: 64px;
