--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -26,9 +26,10 @@
 			border: 0px;
 			width: 200px;
 			color: white;
+			padding-left: 8px;
 
 			&::placeholder {
-				color: rgba(255,255,255,0.3);
+				color: rgba(255,255,255,0.31);
 				-webkit-font-smoothing: antialiased;
 				-moz-osx-font-smoothing: grayscale;
 			}
@@ -40,7 +41,7 @@
 		}
 
 		button {
-			background-color: rgba(255,255,255,0.2);
+			background-color: #2588FF;
 		}
 	}
 }
