--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -13,6 +13,17 @@ $top-padding: 48px;
 $card-shadow: 0 2px 4px 0 rgba(0,0,0,0.04);
 $panel-width: 300px;
 
+@font-face {
+ font-family: "Apercu";
+ src: url("https://s3-us-west-1.amazonaws.com/polymer-fonts/Apercu.woff") format("woff");
+}
+
+@font-face {
+ font-family: "Apercu";
+ font-weight: 700;
+ src: url("https://s3-us-west-1.amazonaws.com/polymer-fonts/Apercu-Bold.woff") format("woff");
+}
+
 html, body, #root {
 	width: 100%;
 	height: 100%;
