--- a/src/index.css
+++ b/src/index.css
@@ -927,6 +927,9 @@ div.button-dropdown {
     list-style-type: none;
     padding: 0px; }
 
+.products {
+  padding: 0 50px; }
+
 .products-list-item {
   padding: 0 16px;
   display: flex;
