--- a/src/index.css
+++ b/src/index.css
@@ -1004,9 +1004,12 @@ div.processes div.card {
   max-width: 600px; }
 
 .products-card {
+  padding: 0 50px;
   color: #4f4f4f;
   font-size: 14px;
   line-height: 20px; }
+  .products-card > button {
+    margin-bottom: 30px; }
   .products-card h2 {
     color: rgba(0, 0, 0, 0.48);
     display: block;
