--- a/src/styles/productscard.scss
+++ b/src/styles/productscard.scss
@@ -3,9 +3,15 @@ div.processes div.card {
 }
 
 .products-card {
+	padding: 0 50px;
+
 	color: rgb(79,79,79);
 	font-size: 14px;
 	line-height: 20px;
+
+	> button {
+		margin-bottom: 30px;
+	}
 
 	h2 {
 		color: $gray;
