--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -5,11 +5,22 @@
 	overflow-x: hidden;
 	background-color:white;
 
+	&.nopadding {
+		padding: 0px;
+	}
+
 	.rule {
 		background-color: $light-gray;
 		height: 1px;
 		margin: 16px;
 		margin-bottom: 15px;
+	}
+
+	.cardrule-v2 {
+		background-color: $light-gray;
+		margin-left: -16px;
+		width: calc(100% + 32px);
+		height: 1px;
 	}
 
 	&.big {
