--- a/src/styles/oldstyles/processtile.scss
+++ b/src/styles/oldstyles/processtile.scss
@@ -1,3 +1,20 @@
+$primary: #0073F9; // #49A8F3;
+$background-color: #FBFCFC;
+$light-grey: #eee;
+$shadow-0: 0 1px 4px rgba(0,0,0,0.03), 0 1px 3px rgba(0,0,0,0.06);
+$shadow-1: 0 1px 4px rgba(0,0,0,0.08), 0 1px 3px rgba(0,0,0,0.12);
+$shadow-2: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+$font-stack: "Camphor Pro", Nunito, Overpass, Proxima Nova, sans-serif;
+$unit: 10px;
+
+$section-border: 1px solid rgba(0,0,0,0.1);
+$sidebar-width: 270px;
+$navbar-height: 50px;
+
+$z-index-navbar: 990;
+$z-index-dialog: 991;
+$z-index-edit-menu: 992;
+
 $blue200: #90CAF9;
 
 .factorymap {
