beginnings of adding a formula

--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -22,6 +22,7 @@ $background-color: #F8F8F8;
 $red: #DD5151;
 $black: rgba(0,0,0,0.86);
 $gray: rgba(0,0,0,0.48);
+$medium-light-gray: rgba(0,0,0,0.11);
 $light-gray: rgba(0,0,0,0.06);
 $theme-color: #0073F9; //#2198EE; //42AFFF;
 $dark-theme-color: #0465D8;
@@ -31,6 +32,8 @@ $nav-height: 64px;
 $top-padding: 48px;
 $card-shadow: 0 2px 4px 0 rgba(0,0,0,0.04);
 $panel-width: 300px;
+
+$green: #8ADC38;
 
 @font-face {
   font-family: 'Material Icons';
