--- a/src/components/Card/styles/card.scss
+++ b/src/components/Card/styles/card.scss
@@ -7,10 +7,6 @@
 	overflow-x: hidden;
 	background-color:white;
 
-	&.nopadding {
-		padding: 0px;
-	}
-
 	.rule {
 		background-color: $light-gray;
 		height: 1px;
@@ -33,6 +29,15 @@
 		.rule {
 			margin: 32px;
 			margin-bottom: 31px;
+		}
+	}
+
+	&.nopadding {
+		padding: 0px;
+
+		.cardrule-v2 {
+			margin-left: 0;
+			width: 100%;
 		}
 	}
 }
