--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -59,6 +59,7 @@
 	margin-bottom: 10px;
 	padding: 0 20px;
 	background-color: white;
+	border-radius: 4px;
 	box-shadow: $light-gray 0 2px 4px 0;
 
 	.code {
