--- a/src/components/ProductPage/styles/formula.scss
+++ b/src/components/ProductPage/styles/formula.scss
@@ -20,6 +20,10 @@
 		flex: 1;
 		text-align: center;
 		margin-right: 16px;
+
+		.Select--single > .Select-control .Select-value {
+			padding-left: 0;
+		}
 	}
 
 	.rhs {
