--- a/src/components/ProductPage/styles/formulafield.scss
+++ b/src/components/ProductPage/styles/formulafield.scss
@@ -4,6 +4,9 @@
 	background-color: $light-gray;
 	padding: 8px;
 	line-height: 20px;
+	border-radius: 4px;
+	position: relative;
+	font-family: 'Apercu Mono';
 
 //	style={{'height': '200px', 'border': '1px solid blue'}}
 }
@@ -11,10 +14,33 @@
 .attribute-pill {
 	display: inline-block;
 	font-size: 12px;
-	line-height: 20px;
-	color: white;	
+	line-height: 20px;	
 	-webkit-font-smoothing: antialiased;
 	padding: 0 4px;
-	background-color: orange; 
+	background-color: none;
+	border: solid 1px $primary;
+	color: $primary;
 	border-radius: 5px;
+	margin: 0px 4px;
+	font-family: 'Apercu';
+}
+
+.available-attributes {
+	background-color: white;
+	position: absolute;
+	top: 34px;
+	left: 0;
+	width: 100%;
+	border: 1px solid $light-gray;
+	font-family: 'Apercu';
+
+	& > div {
+		padding: 0px 8px;
+		border-radius: 0 0 4px 4px;
+		&:hover {
+			background-color: $primary;
+			color: white;
+			-webkit-font-smoothing: antialiased;
+		}
+	}
 }
