--- a/src/components/ProductPage/styles/formulafield.scss
+++ b/src/components/ProductPage/styles/formulafield.scss
@@ -2,8 +2,8 @@
 
 .formula-field {
 	background-color: $light-gray;
-	padding: 8px;
-	line-height: 20px;
+	padding: 6px 8px;
+	line-height: 24px;
 	border-radius: 4px;
 	position: relative;
 	font-family: 'Apercu Mono';
