removed problematic styles

--- a/src/components/Inputs/styles/input.scss
+++ b/src/components/Inputs/styles/input.scss
@@ -1,7 +1,7 @@
 @import './select.scss';
 
 .input-medium-gray {
-	background-color: $medium-light-gray;
+	//background-color: $medium-light-gray;
 	border: 0;
 	outline: 0;
 	border-radius: 4px;
