--- a/src/components/ProductPage/styles/formulasection.scss
+++ b/src/components/ProductPage/styles/formulasection.scss
@@ -8,10 +8,19 @@
 	}
 
 	.recipe-process-header {
+		background-color: #424242;
+		color: white;
+		-webkit-font-smoothing: antialiased;
+		border-radius: 4px 4px 0 0 ;
+
 		padding: 8px 16px;
 		display: flex;
 		span {
 			flex: 1;
+		}
+
+		button.link {
+			color: rgba(255,255,255,0.7)
 		}
 	}
 }
