--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -30,7 +30,7 @@ $baseline: 8px;
 $nav-width: 144px;
 $nav-height: 64px;
 $top-padding: 48px;
-$card-shadow: 0 2px 4px 0 rgba(0,0,0,0.04);
+$card-shadow: 0 0 8px 0 rgba(0,0,0,0.08);
 $panel-width: 300px;
 
 $green: #8ADC38;
