--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -69,6 +69,10 @@
 	border-radius: 4px;
 	box-shadow: $light-gray 0 2px 4px 0;
 
+	&:hover {
+		background-color: $light-grey;
+	}
+
 	.code {
 		font-weight: bold;
 		text-overflow: ellipsis;
